chore: [HN] fix exclaim mark json translate

--- a/public/locales/id/landing.json
+++ b/public/locales/id/landing.json
@@ -1,6 +1,6 @@
 {
     "section1":{
-        "header": "Bikin <1>Packaging</1> Apa Aja<br />di Garapin, Bisa!!",
+        "header": "Bikin <1>Packaging</1> Apa Aja<br />di Garapin, Bisa!",
         "content": "Garapin menyediakan berbagai layanan produksi untuk semua kebutuhanmu.<br />Butuh packaging siap pakai, cetak kuantiti kecil, atau custom partai besar? Garapin solusinya!",
 
         "searchbar": "Saya mau buat...",
