feat: [HN] i18n for auth & product pages

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,5 +13,14 @@
         "contact": {
             "header": "Get in Touch"
         }
+    }, 
+    "appBar": {
+        "searchBarText": "Search...",
+        "menu": {
+            "profile": "Profile",
+            "logout": "Logout"
+
+        },
+        "loginButton": "Login"
     }
 }
