--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -19,8 +19,14 @@
         "menu": {
             "profile": "Profil",
             "logout": "Keluar"
-
         },
         "loginButton": "Masuk"
+    },
+    "cart": {
+        "title": "Keranjang",
+        "confirmButton": "BELI",
+        "totalPrice": "Total Harga",
+        "deleteButton": "hapus",
+        "selectAll": "Pilih semua"
     }
 }
