chore: [HN] landing copy body change

--- a/public/locales/en/landing.json
+++ b/public/locales/en/landing.json
@@ -31,8 +31,8 @@
         "viewAllButton": "View All"
     },
     "section3":{
-        "header": "More than just a Business Directory",
-        "content": "Lorem ipsum dolor sit amet consectetur. Scelerisque fusce gravida et risus facilisis. Dapibus nascetur purus et ac. Nec euismod amet enim scelerisque venenatis. At sem purus arcu et egestas. Velit aenean et sed cras habitant morbi. Cursus urna tellus pellentesque vestibulum aliquam aenean."
+        "header": "Inviting new partners to join!",
+        "content": "We invite CREATORS, ARTISANS, PRODUCERS, CRAFTSMEN, and ANYONE who can CREATE ARTWORK or PRODUCTS to join us."
     },
     "section4": {
         "header": "In Media's Spotlight",
