--- a/public/locales/id/landing.json
+++ b/public/locales/id/landing.json
@@ -32,8 +32,8 @@
 
     },
     "section3":{
-        "header": "Lebih dari Sekadar Direktori Usaha",
-        "content": "This is the content of section 3."
+        "header": "Mengundang mitra baru untuk bergabung!",
+        "content": "Kami mengundang para KREATOR, PENGRAJIN, PRODUSEN, PEKERJA TERAMPIL, dan SIAPAPUN yang bisa MENGHASILKAN KARYA atau PRODUK untuk bergabung bersama kami."
     },
     "section4": {
         "header": "Dalam Sorotan Media",
