feat: [HN] update card price display, landing page

--- a/public/locales/en/landing.json
+++ b/public/locales/en/landing.json
@@ -8,27 +8,31 @@
         "credentials": "Trusted by Indonesia's Top Brands"
 
     },
-    "section2":{
-        "header": "Copy Message 1: As easy as 1,2,3.",
+    "section2": {
+        "header": "How Garapin Works: 1, 2, 3, Send.",
         "content": {
             "step1": {
-                "header": "Find it",
-                "content": "This is the content of step 1."
+                "header": "Ideation",
+                "content": "Your ideas are important and valuable, and you need assistance to bring your ideas to life."
             },
             "step2": {
-                "header": "Produce it",
-                "content": "This is the content of step 2."
+                "header": "Search",
+                "content": "Discover and learn about products that align with your idea's needs."
             },
             "step3": {
-                "header": "Ship it",
-                "content": "This is the content of step 3."
+                "header": "Process",
+                "content": "After finding the suitable product, we will begin working on your idea. You're free to monitor and ensure that the work aligns with your desires."
+            },
+            "step4": {
+                "header": "Send",
+                "content": "Your product is now ready! We will promptly deliver it to your location. Don't forget to check it and provide your feedback."
             }
         }
-
-    },
+    },    
     "sectionJelajah": {
         "header": "Discover Garapin Products",
-        "viewAllButton": "View All"
+        "viewAllButton": "View All",
+        "categoryHeader": "Discover by Category"
     },
     "section3":{
         "header": "Inviting new partners to join!",
@@ -36,7 +40,8 @@
     },
     "section4": {
         "header": "In Media's Spotlight",
-        "content": "Lorem ipsum dolor sit amet consectetur. Scelerisque fusce gravida et risus facilisis. Dapibus nascetur purus et ac. Nec euismod amet enim scelerisque venenatis. At sem purus arcu et egestas. Velit aenean et sed cras habitant morbi. Cursus urna tellus pellentesque vestibulum aliquam aenean."    },
+        "content": "We're excited to share that Garapin has been making waves in the media. Stay tuned to learn more about our journey, achievements, and the impact we're making. Join us as we continue to push boundaries and bring your ideas to life!"
+    },
     "section5": {
         "header": "Ease your Business with Garapin",
         "content": "Lorem ipsum dolor sit amet consectetur. Scelerisque fusce gravida et risus facilisis. Dapibus nascetur purus et ac. Nec euismod amet enim scelerisque venenatis. At sem purus arcu et egestas. Velit aenean et sed cras habitant morbi. Cursus urna tellus pellentesque vestibulum aliquam aenean.",
