chore: [HN] tidy up css register n landing, add verify toast

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -29,5 +29,8 @@
         "totalPrice": "Total Price",
         "deleteButton": "delete",
         "selectAll": "Select All"
+    },
+    "email": {
+        "verified": "Email verified successfully!"
     }
 }
