--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -1,35 +1,45 @@
 {
-    "footer": {
-        "excerpt": {
-            "header": "Apa Sih Garapin?",
-            "content": "Garapin adalah sebuah aplikasi mobile atau platform digital yang membantu para produsen dan maklon untuk mendapatkan customer yang ingin memproduksi sebuah barang melalui pabrik dan produsen yang terpercaya dengan quantity yang terjangkau oleh customer."
-        },
-        "pse": {
-            "header": "Tanda Daftar PSE"
-        },
-        "socials": {
-            "header": "Temukan di Media Sosial"
-        },
-        "contact": {
-            "header": "Hubungi Kami"
-        }
+  "footer": {
+    "excerpt": {
+      "header": "Apa Sih Garapin?",
+      "content": "Garapin adalah sebuah aplikasi mobile atau platform digital yang membantu para produsen dan maklon untuk mendapatkan customer yang ingin memproduksi sebuah barang melalui pabrik dan produsen yang terpercaya dengan quantity yang terjangkau oleh customer."
     },
-    "appBar": {
-        "searchBarText": "Cari sesuatu...",
-        "menu": {
-            "profile": "Profil",
-            "logout": "Keluar"
-        },
-        "loginButton": "Masuk"
+    "pse": {
+      "header": "Tanda Daftar PSE"
     },
-    "cart": {
-        "title": "Keranjang",
-        "confirmButton": "BELI",
-        "totalPrice": "Total Harga",
-        "deleteButton": "hapus",
-        "selectAll": "Pilih semua"
+    "socials": {
+      "header": "Temukan di Media Sosial"
     },
-    "email": {
-        "verified": "Email berhasil diverifikasi!"
+    "contact": {
+      "header": "Hubungi Kami"
+    },
+    "our_menu": {
+      "header": "Menu Kami",
+      "home": "Home",
+      "product": "Produk",
+      "about_us": "Tentang Kami",
+      "our_contact": "Kontak Kami"
+    },
+    "get_in_touch": {
+      "header": "Get In Touch"
     }
+  },
+  "appBar": {
+    "searchBarText": "Cari sesuatu...",
+    "menu": {
+      "profile": "Profil",
+      "logout": "Keluar"
+    },
+    "loginButton": "Masuk"
+  },
+  "cart": {
+    "title": "Keranjang",
+    "confirmButton": "BELI",
+    "totalPrice": "Total Harga",
+    "deleteButton": "hapus",
+    "selectAll": "Pilih semua"
+  },
+  "email": {
+    "verified": "Email berhasil diverifikasi!"
+  }
 }
