--- a/public/locales/id/products.json
+++ b/public/locales/id/products.json
@@ -1,3 +1,3 @@
 {
-    "searchResult": "Menampilkan {{result}} hasil untuk pencarian \"{{searchTerm}}\""
+  "searchResult": "Menampilkan {{result}} hasil untuk \"{{searchTerm}}\""
 }
