feat: add mobile design cart

--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -35,7 +35,7 @@
     "loginButton": "Masuk"
   },
   "cart": {
-    "title": "Keranjang",
+    "title": "Keranjang Belanja",
     "confirmButton": "BELI",
     "totalPrice": "Total Harga",
     "deleteButton": "hapus",
