feat: add header and custom 404 page

--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -28,8 +28,10 @@
     "searchBarText": "Cari sesuatu...",
     "menu": {
       "profile": "Profil",
-      "logout": "Keluar",
+      "logout": "Log Out",
       "totalTransaction": "Total Transaksi",
+      "totalShop": "Total Belanja",
+      "shopPoint": "Point Belanja",
       "cart": "Keranjang"
     },
     "loginButton": "Masuk"
