--- a/public/locales/id/products.json
+++ b/public/locales/id/products.json
@@ -1,3 +1,5 @@
 {
-  "searchResult": "Menampilkan {{result}} hasil untuk \"{{searchTerm}}\""
+  "searchResult": "Menampilkan {{result}} hasil untuk \"{{searchTerm}}\"",
+  "show": "Menampilkan",
+  "results": "hasil untuk \"{{searchTerm}}\""
 }
