fix: update mobile design

--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -30,7 +30,7 @@
       "profile": "Profil",
       "logout": "Log Out",
       "totalTransaction": "Total Transaksi",
-      "totalShop": "Total Belanja",
+      "totalShop": "Keranjang Belanja",
       "shopPoint": "Point Belanja",
       "cart": "Keranjang"
     },
