fix: update wording register

--- a/public/locales/id/auth.json
+++ b/public/locales/id/auth.json
@@ -9,7 +9,7 @@
       "password_confirmation": "Konfirmasi Password",
       "nomorHp": "Nomor HP",
       "dataPerusahaan": "Data Perusahaan",
-      "namaPerusahaan": "Nama Perusahaan",
+      "namaPerusahaan": "Nama Usaha/Perusahaan",
       "liniBisnis": "Lini Bisnis",
       "liniBisnisOther": "Sebutkan lini bisnis Anda"
     },
