--- a/public/locales/id/landing.json
+++ b/public/locales/id/landing.json
@@ -87,5 +87,6 @@
     "title": "Konsultasi Gratis",
     "description": "Dengan Klik button di samping anda akan mendapatkan konsultasi gratis dari kami",
     "button": "Konsultasi Sekarang"
-  }
+  },
+  "create_packaging": "Buat Kemasan"
 }
